k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeclock-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeclock-api
  template:
    metadata:
      labels:
        app: timeclock-api
    spec:
      containers:
        - name: timeclock-api
          image: timeclock-api:1.0
          ports:
            - containerPort: 8080
