k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeclock-api
spec:
  type: NodePort
  selector:
    app: timeclock-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
